--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tanstack/react-query": "^5.80.7",
+    "@types/react-leaflet": "^2.8.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.5"
   },
   "devDependencies": {
