--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tanstack/react-query": "^5.80.7",
-    "@types/react-leaflet": "^2.8.3",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.395.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.2.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
@@ -35,3 +38,4 @@
     "vite": "^6.3.5"
   }
 }
+
